list(APPEND TARGET_INCLUDE_DIRS ${GTEST_INCLUDE_DIRS})
list(APPEND TARGET_INCLUDE_DIRS ${GMOCK_INCLUDE_DIRS})
list(APPEND TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB HDRS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

list(APPEND TARGET_PROJECT_SOURCES_TEST ${SRCS} ${HDRS})

SET(CMAKE_OSX_SYSROOT "iphoneos")
SET(CMAKE_XCODE_EFFECTIVE_PLATFORMS "-iphoneos;-iphonesimulator")

set(CMAKE_XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "11.0" CACHE STRING "Minimum supported iOS version")

# https://svn.scolring.org/trunk/dependencies/CMake/toolchain/IOS.toolchain.cmake
set(IOS_IPHONEOS_ARCHS "arm64 armv7" CACHE STRING "Target iPhone architectures")
set(IOS_IPHONESIMULATOR_ARCHS "i386 x86_64" CACHE STRING "Target iPhone simulator architectures")
# Set iPhoneOS architectures
set(CMAKE_XCODE_ATTRIBUTE_ARCHS[sdk=iphoneos*] "${IOS_IPHONEOS_ARCHS}")
set(CMAKE_XCODE_ATTRIBUTE_VALID_ARCHS[sdk=iphoneos*] "${IOS_IPHONEOS_ARCHS}")

# Set iPhoneSimulator architectures
set(CMAKE_XCODE_ATTRIBUTE_ARCHS[sdk=iphonesimulator*] "${IOS_IPHONESIMULATOR_ARCHS}")
set(CMAKE_XCODE_ATTRIBUTE_VALID_ARCHS[sdk=iphonesimulator*] "${IOS_IPHONESIMULATOR_ARCHS}")

add_executable( ${CMAKE_PROJECT_NAME}-static-test ${TARGET_PROJECT_SOURCES_TEST} ${TARGET_RESOURCES})
# set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY XCODE_STARTUP_PROJECT ${CMAKE_PROJECT_NAME})

set_target_properties(
    ${CMAKE_PROJECT_NAME}-static-test PROPERTIES

    MACOSX_BUNDLE TRUE
    RESOURCE "${TARGET_RESOURCES}"

    XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "${XCODE_DEVELOPMENT_TEAM}"
    # OUTPUT_NAME "${TARGET_EXECUTABLE_NAME}"
    POSITION_INDEPENDENT_CODE ON
    XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
    XCODE_ATTRIBUTE_COMBINE_HIDPI_IMAGES "NO"
    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_BINARY_DIR}/Info.plist"
    XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME "AppIcon"
    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER ${TARGET_BUNDLE_ID}.ios.test
    XCODE_ATTRIBUTE_SDKROOT "iphoneos"
    XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
    XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_LAUNCHIMAGE_NAME "LaunchImage"
    # XCODE_ATTRIBUTE_PRODUCT_NAME ${TARGET_EXECUTABLE_NAME}
    XCODE_ATTRIBUTE_ENABLE_BITCODE NO
    XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "iPhone Developer"
    INCLUDE_DIRECTORIES "${TARGET_INCLUDE_DIRS}"
    )

target_compile_definitions( ${CMAKE_PROJECT_NAME} PUBLIC ${TARGET_DEFINITIONS})
target_link_libraries( ${CMAKE_PROJECT_NAME}-static-test ${CMAKE_PROJECT_NAME}-static ${GTEST_LIBRARY} ${GMOCK_LIBRARY})

# set_source_files_properties( "${TARGET_RESOURCES}" PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
#
# add_executable( ${CMAKE_PROJECT_NAME}-static-test MACOSX_BUNDLE ${TARGET_PROJECT_SOURCES_TEST} ${TARGET_RESOURCES})
#
# target_compile_definitions( ${CMAKE_PROJECT_NAME}-static-test PUBLIC ${TARGET_DEFINITIONS})
#
# target_link_libraries( ${CMAKE_PROJECT_NAME}-static-test ${CMAKE_PROJECT_NAME}-static ${GTEST_LIBRARY} ${GMOCK_LIBRARY})
#
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY INCLUDE_DIRECTORIES ${TARGET_INCLUDE_DIRS})
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY RESOURCE ${TARGET_RESOURCES})
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY MACOSX_BUNDLE_INFO_PLIST ${CMAKE_BINARY_DIR}/Info.plist)
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME "AppIcon")
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER ${TARGET_BUNDLE_ID}.macOS)
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "Mac Developer")
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY MACOSX_BUNDLE TRUE)
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_INSTALL_PATH "/Applications")
# set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "${XCODE_DEVELOPMENT_TEAM}")
#
add_test(NAME ${CMAKE_PROJECT_NAME}-static-test COMMAND ${CMAKE_PROJECT_NAME}-static-test)
