list(APPEND TARGET_INCLUDE_DIRS ${GTEST_INCLUDE_DIRS})
list(APPEND TARGET_INCLUDE_DIRS ${GMOCK_INCLUDE_DIRS})
list(APPEND TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB HDRS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

list(APPEND TARGET_PROJECT_SOURCES_TEST ${SRCS} ${HDRS})

set_source_files_properties( ${TARGET_RESOURCES} PROPERTIES MACOSX_PACKAGE_LOCATION ${CMAKE_PROJECT_NAME}/Contents/Resources/)

add_executable( ${CMAKE_PROJECT_NAME}-static-test MACOSX_BUNDLE ${TARGET_PROJECT_SOURCES_TEST} ${TARGET_RESOURCES})

target_compile_definitions( ${CMAKE_PROJECT_NAME}-static-test PUBLIC ${TARGET_DEFINITIONS})

target_link_libraries( ${CMAKE_PROJECT_NAME}-static-test ${CMAKE_PROJECT_NAME}-static ${GTEST_LIBRARY} ${GMOCK_LIBRARY})

set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY INCLUDE_DIRECTORIES ${TARGET_INCLUDE_DIRS})
set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY RESOURCE ${TARGET_RESOURCES})
set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY MACOSX_BUNDLE_INFO_PLIST ${CMAKE_BINARY_DIR}/Info.plist)
set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME "AppIcon")
set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER ${TARGET_BUNDLE_ID}.macOS)
set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "Mac Developer")
set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY MACOSX_BUNDLE TRUE)
set_property(TARGET ${CMAKE_PROJECT_NAME}-static-test PROPERTY XCODE_ATTRIBUTE_INSTALL_PATH "/Applications")

add_test(NAME ${CMAKE_PROJECT_NAME}-static-test COMMAND ${CMAKE_PROJECT_NAME}-static-test)
